working login / manager signup

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -26,6 +26,12 @@
                     <input class="input is-large" type="password" name="password" placeholder="Password">
                 </div>
             </div>
+            <div class="field">
+                <label class="checkbox">
+                    <input name="manager" type="checkbox">
+                    Apply as class manager
+                </label>
+            </div>
 
             <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
         </form>
