--- a/app/templates/newabsence.html
+++ b/app/templates/newabsence.html
@@ -1,5 +1,5 @@
 
-<form method="POST" action="/user/api/absence/submit">
+<!--<form method="POST" action="/user/api/absence/submit">
 
     <label for="subject">Choose a car:</label>
     <select id="subject" name="subject">
@@ -15,4 +15,48 @@
         </div>
     </div>
     <button class="button is-block is-info is-large is-fullwidth">Login</button>
-</form>
+</form>-->
+
+
+<html>
+    <head>
+        <script
+          src="https://code.jquery.com/jquery-3.6.0.min.js"
+          integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+          crossorigin="anonymous"></script>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    </head>
+    <body>
+        <div class="card">
+            <div class="card-content">
+              <span class="card-title center-align">Create new Abcence</span>
+              <form method="POST" action="/user/api/absence/submit">
+
+                <div class="input-field col s12">
+                    <select id="subject" name="subject">
+                        {% for subject in subjects %}
+                            <option value="{{subject.id}}">{{subject.name}}</option>
+                        {% endfor %}
+                    </select>
+                    <label>Choose a subject</label>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input name="count" id="count" type="text" class="validate">
+                        <label for="count">Number of lessions</label>
+                    </div>
+                </div>
+                </div>
+                <div class="card-action align-right">
+                    <button class="btn white black-text">Submit</button>
+                </div>
+            </div>
+          </div>
+    </body>
+    <script>
+        $(document).ready(function(){
+            $('select').formSelect();
+        });
+    </script>
+</html>
