--- a/app/templates/classsetup.html
+++ b/app/templates/classsetup.html
@@ -4,17 +4,42 @@
           src="https://code.jquery.com/jquery-3.6.0.min.js"
           integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
           crossorigin="anonymous"></script>
-
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </head>
     <body>
+        <nav class="grey darken-4"> 
+            <div class="nav-wrapper">
+            <span class="brand-logo center">Yet Another Grade Manager</span>
+              <a href="#" class="brand-logo right">Logo</a>
+              <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="/logout">Logout</a></li>
+              </ul>
+            </div>
+        </nav>
 
-        <h1>Set your class name</h1>
-        <form method="POST" action="/manager/setup/initclass" id="classform">
-            <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
-            <button class="button is-block is-info is-large is-fullwidth">Submit class name</button>
-        </form>
-
-
+        <div class="container">
+            <div class="col s12 m12">
+              <div class="card">
+                <div class="card-content">
+                  <span class="card-title center-align">Set your class name</span>
+                  <form method="POST" action="/manager/setup/initclass" id="classform">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input name="name" id="name" type="text" class="validate">
+                            <label for="name">Name</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="right">
+                            <button class="btn white black-text">Submit class name</button>
+                        </div>
+                    </div>
+                </form>
+                </div>
+              </div>
+            </div>
+          </div>
     </body>
     <script>
     </script>
