--- a/app/templates/configform.html
+++ b/app/templates/configform.html
@@ -4,21 +4,43 @@
           src="https://code.jquery.com/jquery-3.6.0.min.js"
           integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
           crossorigin="anonymous"></script>
-
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </head>
     <body>
+        <nav class="grey darken-4"> 
+            <div class="nav-wrapper">
+            <span class="brand-logo center">Yet Another Grade Manager</span>
+              <a href="#" class="brand-logo right">Logo</a>
+              <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="/logout">Logout</a></li>
+              </ul>
+            </div>
+        </nav>
 
-
-
-        <h1>Add new Config</h1>
-        <h2>Your class invite key is: {{invite_key}}</h2>
-        <form method="POST" action="/manager/setup/addconfig" id="configform">
-
-            <button class="button is-block is-info is-large is-fullwidth">Submit config</button>
-        </form>
-
-        <textarea name="config" form="configform"></textarea>
-
+        <div class="container">
+            <div class="col s12 m12">
+              <div class="card">
+                <div class="card-content">
+                  <span class="card-title center-align">Add new Config</span>
+                  <p>Your class invite key is: {{invite_key}}</p>
+                  <form method="POST" action="/manager/setup/addconfig" id="configform">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <textarea id="config" name="config" class="materialize-textarea"></textarea>
+                            <label for="config">Config</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="right">
+                            <button class="btn white black-text">Submit config</button>
+                        </div>
+                    </div>
+                </form>
+                </div>
+              </div>
+            </div>
+          </div>
     </body>
     <script>
     </script>
