--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,8 +10,7 @@
     <body>
         <nav class="grey darken-4"> 
             <div class="nav-wrapper">
-            <span class="brand-logo center">Yeah login to this amazing site</span>
-              <a href="#" class="brand-logo right">Logo</a>
+            <span class="brand-logo center">Yet another grade manager</span>
               <ul id="nav-mobile" class="left hide-on-med-and-down">
               </ul>
             </div>
@@ -50,10 +49,10 @@
                         </label>
                     </p>
                     <div class=" card-action row">
-                        <div class="left">
-                            <a class="blue-text" href="/signup">U new? Then sign up</a>
-                        </div>
                         <div class="right">
+                            <a class="blue-text" href="/signup">No account? Then sign up</a>
+                        </div>
+                        <div class="left">
                             <button class="btn white black-text">Login</button>
                         </div>
                     </div>
