--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -12,22 +12,19 @@
         <div class="nav-wrapper">
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a href="/logout">Logout</a></li>
+            <li><a href="/grades/submit">Add new grade</a></li>
+            <li><a href="/absences/submit">Add new absence</a></li>
+            <li><a href="/specialgrades/submit">Add new special grade</a></li>           
           </ul>
-          <span class="brand-logo center">This is profile site</span>
-          <a href="#" class="brand-logo right">Logo</a>
+          <span class="brand-logo center">Yet another grade manager</span>
         </div>
       </nav>
 
-        <!--{{info}} <br>
-        {{user}} <br>
-        {{grades}} <br>
-        {{absences}} <br>
-        {{specials}}-->
       <div class="container">
         <div class="card">
           <div class="card-content">
             <span class="card-title center-align">Overview Grades</span>
-            <table>
+            <table class="reponsive">
               <thead>
                 <tr>
                     <th>Subject</th>
@@ -101,27 +98,14 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">This is an amazing website</h5>
-                <p class="grey-text text-lighten-4">roses are red violets are blue who is your daddy and what does he do</p>
-                <p class="grey-text text-lighten-4">roses are red violets are blue a face like yours belongs in a zoo</p>
-                <p class="grey-text text-lighten-4">roses are red violets are blue I'd rather be single than with someone like you</p>
-                <p class="grey-text text-lighten-4">roses are red violets are blue you look like a donkey and smell like one too</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Much wow such link</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
+                <h5 class="white-text">Yet another grade manager</h5>
+                <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2022 Sanderus And Marcus Productions
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2022 Volery & Ingold IT-Solutions
             </div>
           </div>
         </footer>
