--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -10,8 +10,7 @@
     <body>
         <nav class="grey darken-4"> 
             <div class="nav-wrapper">
-            <span class="brand-logo center">Yeah sign up to this amazing site</span>
-              <a href="#" class="brand-logo right">Logo</a>
+            <span class="brand-logo center">Yet another grade manager</span>
               <ul id="nav-mobile" class="left hide-on-med-and-down">
               </ul>
             </div>
@@ -57,7 +56,7 @@
                     </p>
                     <div class=" card-action row">
                         <div class="left">
-                            <a class="blue-text" href="/login">U not new? Then go to login</a>
+                            <a class="blue-text" href="/login">You have alerady an account? Then go to login</a>
                         </div>
                         <div class="right">
                             <button class="btn white black-text">Sign Up</button>
