--- a/app/templates/newspecialgrade.html
+++ b/app/templates/newspecialgrade.html
@@ -8,6 +8,19 @@
           <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </head>
     <body>
+
+        <nav class="grey darken-4"> 
+            <div class="nav-wrapper">
+              <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="/logout">Logout</a></li>
+                <li><a href="/profile">Profile</a></li>
+                <li><a href="/grades/submit">Add new grade</a></li>
+                <li><a href="/absences/submit">Add new absence</a></li>        
+              </ul>
+              <span class="brand-logo center">Yet another grade manager</span>
+            </div>
+        </nav>
+    
         <div class="card">
             <div class="card-content">
               <span class="card-title center-align">Create new Grade</span>
